--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <meta name="format-detection" content="telephone=no,address=no" />
     <meta name="apple-mobile-web-app-status-bar-style" content="white" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>taro_webpack5_react</title>
+    <title>taro</title>
     <script>
       <%= htmlWebpackPlugin.options.script %>
     </script>
